HW fruitShop fixed, v1.2