@@ -1,11 +1,10 @@
-package service.impl;
+package core.basesyntax.service.impl;
 
 import core.basesyntax.FruitTransfer;
 import core.basesyntax.Operation;
+import core.basesyntax.service.DataConverter;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
-import service.DataConverter;
 
 public class DataConverterImpl implements DataConverter {
     @Override
@@ -13,7 +12,8 @@ public class DataConverterImpl implements DataConverter {
         List<FruitTransfer> transferList = new ArrayList<>();
         List<String[]> collectedLinesInfo = inputReport.stream()
                 .map(s -> s.split(","))
-                .collect(Collectors.toList());
+                .skip(1)
+                .toList();
 
         for (String[] line : collectedLinesInfo) {
             Operation operations = Operation.getOperations(line[0]);
@@ -22,5 +22,13 @@ public class DataConverterImpl implements DataConverter {
             transferList.add(new FruitTransfer(operations, fruit, quantity));
         }
         return transferList;
+    }
+
+    public String convertToStringFormat(List<String> listReport) {
+        StringBuilder stringBuilder = new StringBuilder();
+        for (String line : listReport) {
+            stringBuilder.append(line).append(System.lineSeparator());
+        }
+        return stringBuilder.toString();
     }
 }
